--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quickdevtools",
+  "name": "dailydevtools",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "lucide-react": "^0.468.0",
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3"
