--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "isomorphic-dompurify": "^2.30.0",
     "lucide-react": "^0.468.0",
     "next": "16.1.3",
