--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,14 +8,16 @@
   "theme_color": "#fb923c",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/project_logo.webp",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/webp",
+      "purpose": "any maskable"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/project_logo.webp",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/webp",
+      "purpose": "any maskable"
     }
   ]
 }
