--- a/package.json
+++ b/package.json
@@ -24,12 +24,17 @@
   "dependencies": {
     "@giscus/react": "^3.1.0",
     "@monaco-editor/react": "^4.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.29.2",
     "isomorphic-dompurify": "^2.30.0",
     "lucide-react": "^0.468.0",
     "next": "16.1.3",
     "next-intl": "^4.7.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "sharp": "^0.34.5",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
