--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@giscus/react": "^3.1.0",
     "@monaco-editor/react": "^4.7.0",
     "clsx": "^2.1.1",
+    "curlconverter": "^4.12.0",
     "framer-motion": "^12.29.2",
+    "idb": "^8.0.3",
     "isomorphic-dompurify": "^2.30.0",
     "lucide-react": "^0.468.0",
     "next": "16.1.3",
     "next-intl": "^4.7.0",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "sharp": "^0.34.5",
