--- a/package.json
+++ b/package.json
@@ -25,21 +25,30 @@
     "@giscus/react": "^3.1.0",
     "@monaco-editor/react": "^4.7.0",
     "clsx": "^2.1.1",
+    "curlconverter": "^4.12.0",
     "framer-motion": "^12.29.2",
+    "idb": "^8.0.3",
     "isomorphic-dompurify": "^2.30.0",
+    "js-yaml": "^4.1.1",
+    "json2csv": "^6.0.0-alpha.2",
     "lucide-react": "^0.468.0",
     "next": "16.1.3",
     "next-intl": "^4.7.0",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "sharp": "^0.34.5",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.9",
+    "@types/json2csv": "^5.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/xml-js": "^0.9.0",
     "autoprefixer": "^10.4.24",
     "eslint": "^9",
     "eslint-config-next": "16.1.3",
