--- a/apps/chrome-extension/tsconfig.json
+++ b/apps/chrome-extension/tsconfig.json
@@ -22,6 +22,9 @@
         "paths": {
             "@/*": [
                 "./src/*"
+            ],
+            "@dailydevtools/core-utils": [
+                "../../packages/core-utils/src/index.ts"
             ]
         }
     },
