--- a/apps/chrome-extension/package.json
+++ b/apps/chrome-extension/package.json
@@ -5,13 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite build --watch",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^12.33.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@dailydevtools/core-utils": "workspace:*"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.260",
