--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
   },
   "dependencies": {
     "@giscus/react": "^3.1.0",
+    "@hookform/resolvers": "^5.2.2",
     "@monaco-editor/react": "^4.7.0",
     "@types/dagre": "^0.7.53",
     "@xyflow/react": "^12.10.0",
     "clsx": "^2.1.1",
     "curlconverter": "^4.12.0",
     "dagre": "^0.8.5",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.29.2",
     "idb": "^8.0.3",
     "isomorphic-dompurify": "^2.30.0",
@@ -38,12 +40,15 @@
     "next": "16.1.3",
     "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
+    "openapi-types": "^12.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
     "sharp": "^0.34.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "xml-js": "^1.6.11"
+    "xml-js": "^1.6.11",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
